# minreq

./: Cargo.toml  README.md
src/: connection.rs  decoder.rs  http.rs  lib.rs  requests.rs
tests/: main.rs  setup.rs
