[package]
name = "mrq"
version = "0.1.0"
description = "Simple, minimal-dependency HTTP client"
readme = "README.md"
keywords = ["http", "https", "client", "request"]
categories = ["web-programming::http-client"]
license = "ISC"
edition = "2018"

[dependencies]
rustls = { version = "0.15", optional = true }
webpki-roots = { version = "0.16", optional = true }
webpki = { version = "0.19", optional = true }
failure = "0.1"

[dev-dependencies]
tiny_http = "0.6"

[features]
default = ["https"]
https = ["rustls", "webpki-roots", "webpki"]
